--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-# ---- Streamlit core ----
 streamlit==1.39.0
 python-dotenv==1.0.1
 requests==2.32.3
 
-# ---- LangChain ecosystem ----
+# LangChain ecosystem
 langchain==0.2.15
-langchain-core==0.2.28
+langchain-core==0.2.36
 langchain-community==0.2.10
 
-# ---- For compatibility / parsers ----
 typing-extensions==4.12.2
 pydantic==2.8.2
 pydantic-core==2.20.1
 tenacity==8.2.3
+
+
 
 
 
